# generic-node-se

./: .gitignore  .gitmodules
Software/: CMakeLists.txt  cross.cmake
Software/app/ei_data_collector/: CMakeLists.txt  basic_sensor.c  main.c
Software/app/ei_data_collector/conf/: app_conf.h
Software/app/ei_inferencing_example/: .gitignore  CMakeLists.txt  main.cpp
Software/app/ei_inferencing_example/Core/: main.h
Software/app/secure_element_lorawan/: lora_app.c  sys_app.c
Software/app/secure_element_lorawan/conf/: app_conf.h
